--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CIS-Spring-2022/project-cis_4339_project_7.git"
+    "type": "git"
   },
-  "author": "Tuba, Saja, Manar",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/CIS-Spring-2022/project-cis_4339_project_7/issues"
+  
   },
-  "homepage": "https://github.com/CIS-Spring-2022/project-cis_4339_project_7#readme",
+  "homepage": "",
   "dependencies": {
     "axios": "^0.26.0",
     "body-parser": "^1.19.2",
